# gpra-web

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ALEMBIC_SETUP_SUMMARY.md  ARCHITECTURE_CHANGES.md  CLAUDE.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  QUICKSTART_MIGRATION.md  README.md  RLS_GUIDE.md  RLS_HANDOFF.md  RLS_IMPLEMENTATION_SUMMARY.md  alembic.ini  demo_data.sql  gpr.sh  handoffSummary.md  nodemon.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  shutdown.sh  tailwind.config.js  test_registration.py  update-deps.sh  vite.config.js
.claude/: fab-quickref.md  settings.local.json~
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml
alembic/: README_MIGRATIONS.md  env.py
alembic/versions/: 001_add_multi_tenant_schema.py  002_assign_existing_data_to_admin.py  1a0273548ba5_add_stripe_customer_id_to_subscriptions.py  3313a94b983c_add_stripe_subscription_item_id_to_.py  48554409b67f_add_encrypted_anthropic_api_key_to_users.py  add_inactivity_tracking_20260125.py  c669ca4bf473_rollback_posthog_add_practice_data_.py  ce3858595561_add_lapsed_subscription_tracking_fields.py  (+2 more)
app/: __init__.py  admin.py  billing.py  data_layer.py  database.py  impersonation.py  mailgun_service.py  models.py  password_reset.py  rate_limiter.py  routes.py  routes_v2.py  security.py  subscription_tiers.py  unsubscribe_tokens.py
cron/: check_inactive_subscribers.py  process_scheduled_deletions.py
migrations/: add_autocreate_rate_limits.sql  add_complimentary_accounts.sql  add_user_preferences.sql
(+171 files in other folders)
