[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-practice-assistant"
version = "0.1.0"
description = "A guitar practice routine manager"
authors = [
    {name = "Steven"}
]
requires-python = ">=3.10"
dependencies = [
    "flask",
    "python-dotenv",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "gspread",
    "anthropic",
    "python-magic",
    "pytesseract",
    "pdf2image",
    "pillow",
    "sqlalchemy",
    "psycopg2-binary",
    "flask-cors",
    "alembic",
    "authlib",
    "requests",
    "itsdangerous",
    "stripe",
    "flask-appbuilder",
    "posthog>=7.8.0",
    "youtube_transcript_api",
    "fpdf2"
]

[tool.setuptools]
packages = ["app"]

[tool.pylance]
python.analysis.extraPaths = [".", "app"]